--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
@@ -38,42 +38,7 @@
 .rating-star {
   color: grey;
 }
-// 🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧
-.sm-section2-rkScale{
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
-  width: 100%;
 
-}
-
-.sm-row-box-rkScale{
-  display: flex;
-  gap: 2rem;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-
-}
-.sm-column-box-rkScale{
-  display: flex;
-  gap: 2rem;
-  flex-direction: row;
-  align-items: flex-end;
-  width: 100%;
-  justify-content: center;}
-
-.sm-section3-rkScale{
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  padding: 1.2rem;
-  width: 100%;
-  gap: 1rem;
-}
 @media (min-width: 576px) {
   .desktop {
     display: flex;
@@ -105,7 +70,7 @@
   }
 
   .mobile {
-    padding-bottom: 25%;
+    padding-bottom: 30px;
   }
 
   .selectedCard {
@@ -213,12 +178,12 @@
   outline: none;
 
   float: right;
-  color: #324395;
+  color: grey;
 }
 .add-column-active {
   outline: none;
   float: right;
-
+  
   mat-icon{
     color: #324395;
   }
@@ -303,11 +268,11 @@ textarea::placeholder {
   color: #9fa8da;
 }
 
-// textarea:focus {
-//   min-height: 3rem;
-//   cursor: text;
-//   box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
-// }
+textarea:focus {
+  min-height: 3rem;
+  cursor: text;
+  box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
+}
 
 textarea:placeholder-shown {
   background: none;
@@ -566,12 +531,12 @@ input[type="range"]:focus::-ms-fill-upper {
       img:last-child {
           margin-bottom: 0;
       }
-  }
+  }    
 
   .close-modal {
       // margin-bottom: 5px;
       position: relative;
-
+  
       // top: 12%;
       left: 42.5%;
       width: 15%;
@@ -654,7 +619,7 @@ input[type="range"]:focus::-ms-fill-upper {
       height: auto;
   }
 
-
+  
 
   .modal-video .close-modal {
       position: relative;
