--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.scss
@@ -8,12 +8,7 @@
 }
 
 .edit-icon {
-    color: #324395;
-    position: absolute;
-    margin: 33px;
-    right: 0px;
-    z-index: 999999;
-    top: 0;
+    display: none;    
 }
 
 .paragram-desktop{
@@ -25,6 +20,6 @@
         display: none;
     }
     .paragram-mobile{
-        line-height: 25px;
+        line-height: 25px;        
     }
 }
