--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -93,12 +93,12 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-            <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+            <mat-paginator style="margin-top: 1px;" [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
         </div>
     </div>
     <!-- CALENDAR  📆📆📆📆📆📆📆📆📆-->
     <div style="width: 25%;position: relative;
-        left: 40px;">
+        left: 70px;">
         <div style="width: 100%;">
             <mat-card appearance="outlined" class="demo-inline-calendar-card">
                 <mat-calendar  [selected]="selectedDate" (selectedChange)="onSelect($event)"></mat-calendar>
