--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -40,7 +40,7 @@
 
 .project-name-global{
     color: #324395;
-    font-size: 25px;
+    font-size: 19px;
     transition: all 0.1s ease-in-out;
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
     box-shadow: inset inset 0px 0px 5px #0bd659;
@@ -92,6 +92,11 @@
     width: 95%;
     right: 1rem;
   }
+}
+.bmxPages{
+  gap:5px;
+  display: flex;
+  flex-direction: row;
 }
 .button-name{
   display: flex;
