--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -125,6 +125,7 @@
     }
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
 ::ng-deep .mat-checkbox-background,
 .mat-checkbox-background {
     background-color: #e9ecef80;
@@ -144,6 +145,7 @@
     
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
 ::ng-deep .mat-checkbox-background, 
 .mat-checkbox-background{
     background-color: #e9ecef80;
@@ -192,6 +194,34 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+.error {
+    font-size: 14px;
+    color: rgb(49, 46, 46);
+    text-transform: none;
+    font-weight: 400;
+    width: 100%;
+    height: 100%;
+    /* background-image : url('bsrdev/assets/images/disconnect.jpg'); */
+    background-position: center, center;
+    background-color: whitesmoke;
+    background-blend-mode: screen;
+    
+}
+
+.errorcode {
+    font-size: 75px;
+    color: #ff8300;
+    font-weight: bold;
+    font-family: Helvetica;
+    margin-bottom: 50px;
+}
+
+.errormess {
+    font-size: 25px;
+    color: #ff8300;
+    font-weight: 400;
+    font-family: Helvetica;
+}
 //desktop
 @media (min-width: 1025px) {
     .page-design {
@@ -211,6 +241,7 @@
         overflow-y: scroll;
         overflow-x: hidden;
         @include BoxShadow(2);
+        padding-bottom: 8%;
     }
     .display {
         display: flex;
@@ -220,15 +251,17 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        position: absolute;
         justify-content: center;
+        bottom: 10px;
+        left: 50%;
     }
     .page-buttons-heigth-minus-50 {
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        position: fixed;
-        bottom: 10px;
+        position: absolute;
     }
     .see-tutorial-mobil {
         display: none;
@@ -442,7 +475,7 @@
     background: #324395 !important;
 }
 
-::ng-deep .mat-tooltip {
+::ng-deep .mat-mdc-tooltip {
     background-color: #324395;
     font-size: 18px;
 }
