--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -1,6 +1,6 @@
 
-<button *ngIf="openSettings && bmxClientPageOverview" class="cancel" (click)=" replaceBiI_Markers(); openSettings = !openSettings"
-    mat-icon-button>
+<button *ngIf="openSettings && bmxClientPageOverview" class="cancel"
+    (click)=" replaceBiI_Markers(); openSettings = !openSettings" mat-icon-button>
     <mat-icon class="full-icon" style="font-size: 25px;">check_circle</mat-icon>
 </button>
 <button *ngIf="!openSettings && bmxClientPageOverview" mat-icon-button class="edit-icon"
@@ -8,15 +8,20 @@
     <mat-icon class="full-icon" style="font-size: 25px;">edit</mat-icon>
 </button>
 
-<div class="paragram-desktop" *ngIf="currentPage == 1 && template== 'tinder' ; else regularTemplate" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
-<ng-template #regularTemplate><div class="paragram-mobile" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div></ng-template>
+<div class="paragram-desktop" *ngIf="currentPage == 1 && template== 'tinder' ; else regularTemplate"
+    style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+<ng-template #regularTemplate>
+    <div class="paragram-mobile" style="margin: 30px;font-size: 20px;"
+        [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+</ng-template>
 
 <div cdkDrag>
-    <ckeditor *ngIf="openSettings && bmxClientPageOverview" [editor]="Editor" id="txtTexto" class="ckeditorcev"
-        style="animation: fadeIn 0.1s ease forwards;" [ngModelOptions]="{standalone: true}"
-        [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" >
-    </ckeditor>
+  <ckeditor *ngIf="openSettings && bmxClientPageOverview" [editor]="Editor" id="txtTexto" class="ckeditorcev"
+ [ngModelOptions]="{standalone: true}"
+  [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText">
+</ckeditor>
 </div>
+
 
 <!-- <div style="display: flex;justify-content: space-around; align-items: center;width: 90vw;">
     <div style="text-align: left;width: 400px;">
@@ -26,7 +31,7 @@
     <div style="text-align: left;width: 300px;">email</div>
     <div style="text-align: left;width: 300px;">phone</div>
 </div> -->
-<!-- 
+<!--
 <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
     <div style="font-family: auto;
     font-size: 16px;
