--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -125,7 +125,6 @@
     }
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
 ::ng-deep .mat-checkbox-background,
 .mat-checkbox-background {
     background-color: #e9ecef80;
@@ -145,7 +144,6 @@
     
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of checkbox that may no longer apply for the MDC version. */
 ::ng-deep .mat-checkbox-background, 
 .mat-checkbox-background{
     background-color: #e9ecef80;
@@ -475,7 +473,7 @@
     background: #324395 !important;
 }
 
-::ng-deep .mat-mdc-tooltip {
+::ng-deep .mat-tooltip {
     background-color: #324395;
     font-size: 18px;
 }
